fixed header overlapping cart menu

--- a/Cart.css
+++ b/Cart.css
@@ -5,7 +5,7 @@
   height: 100%;
   width: 60%;
   background-color: #ffffff;
-  z-index: 100;
+  z-index: 102;
   display: flex;
   align-items: start;
   flex-direction: column;
